[package]
name = "scrape-rust-test"
version = "0.1.0"
authors = ["127.0.0.1.255a@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "*"
scraper = "*"
prettytable-rs = "^0.8"
error-chain = "*"
